# NativeCallBack

./: README.md
app/: build.gradle
app/src/androidTest/java/com/attrsc/nativecallback/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/common/: AndroidLog.h  common.h
app/src/main/cpp/source/: Consumer.cpp  Consumer.h  JavaListener.cpp  JavaListener.h  Worker.cpp  Worker.h  YUVQueue.cpp  YUVQueue.h  time-util.cpp  time-util.h
app/src/main/java/com/attrsc/nativecallback/: JNIListener.java  MainActivity.java  NativeHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/attrsc/nativecallback/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
